Støtter validering av eksisterende perioder med helg i OMP.