@@ -1,8 +1,6 @@
 package no.nav.k9.søknad;
 
 import java.util.List;
-import java.util.stream.Collectors;
-
 import no.nav.fpsak.tidsserie.LocalDateSegment;
 import no.nav.fpsak.tidsserie.LocalDateTimeline;
 import no.nav.k9.søknad.felles.type.Periode;
@@ -14,14 +12,14 @@ public final class TidsserieUtils {
     public static List<Periode> tilPeriodeList(LocalDateTimeline<?> t) {
         return t.stream()
                 .map(l -> new Periode(l.getFom(), l.getTom()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public static LocalDateTimeline<Boolean> toLocalDateTimeline(List<Periode> perioder) {
         return new LocalDateTimeline<>(perioder
                 .stream()
                 .map(periode -> new LocalDateSegment<>(periode.getFraOgMed(), periode.getTilOgMed(), true))
-                .collect(Collectors.toList()))
+                .toList())
                 .compress();
     }
 
